@@ -2,6 +2,8 @@
 
     * src/object/o_circle_object.c: Add Doxygen group geda-circle-object-proc.
 
+    * src/object/o_pin_object.c: Add Doxygen group geda-pin-object-proc.
+
 2019-10-25 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/geda/geda_toplevel.c: Revise geda_toplevel_remove_page to set
